--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,28 @@
-Hola soy frank
-=======
-Este es solo un ejemplo 
-Hola^^
-xd ^^
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        #molitoid{
+            color: dimgrey;
+        }
+    </style>
+</head>
+    
+<body>
+    <h1> HOLA</h1>
+    <H2>ADIOS</H2>
+    <P><STrong>esto</STrong>es un parrafo</P>
+    <ul>
+        <li>MILANESA</li>
+        <li>TORTA <strong>PASTOR </strong></li>
+        <li>COLORADITO</li>
+        <li id="molitoid"> MOLITO </li>
+    </ul>
+</body>
+
+</html>
