--- a/Index.html
+++ b/Index.html
@@ -10,6 +10,9 @@
         #molitoid{
             color: dimgrey;
         }
+        .colorverde {
+            color: green;
+        }
     </style>
 </head>
     
@@ -19,8 +22,8 @@
     <P><STrong>esto</STrong>es un parrafo</P>
     <ul>
         <li>MILANESA</li>
-        <li>TORTA <strong>PASTOR </strong></li>
-        <li>COLORADITO</li>
+        <li class="colorverde">TORTA <strong>PASTOR </strong></li>
+        <li class="colorverde">COLORADITO</li>
         <li id="molitoid"> MOLITO </li>
     </ul>
 </body>
