--- a/Index.html
+++ b/Index.html
@@ -21,6 +21,8 @@
     <H2>ADIOS</H2>
     <P><STrong>esto</STrong>es un parrafo</P>
     <ul>
+        <li>CEVICHITO</li>
+        <li>TOSTADA DE JAIBA</li>
         <li>MILANESA</li>
         <li class="colorverde">TORTA <strong>PASTOR </strong></li>
         <li class="colorverde">COLORADITO</li>
