--- a/Index.html
+++ b/Index.html
@@ -78,15 +78,17 @@
             </tr>
         </table>
         
-        <table style="float: left;">
-            <tr>
-                <th><img src="veigar_8.jpg" alt="" width="250" height="150"></th>
-            </tr>
-        </table>
+
         <form action="">
             <label> Nombre</label>
             <input type="text">
         </form>
+
+        <label>Hombre</label>
+        <input type="button">
+        <label > correo </label>
+        <input type="email" name="" id="">
+        <input type="password" name="" id="">
 
     </body>
 
