--- a/Index.html
+++ b/Index.html
@@ -86,6 +86,12 @@
             </tr>
         </table>
         
+        <table style="float: left;">
+            <tr>
+                <th><img src="veigar_8.jpg" alt="" width="250" height="150"></th>
+            </tr>
+        </table>
+        
         <form action="">
             <label> Nombre</label>
             <input type="text">
