--- a/Index.html
+++ b/Index.html
@@ -23,21 +23,21 @@
                 width: auto;
             }
             #contenidod {
-                background-color: brown;
+                background-color: rgb(63, 165, 42);
                 float: left;
                 width: 70%; 
-                height: 500px;
+                height: 300px;
                 max-height: 100%; 
             }
             #contenidoi {
-                background-color: rgb(52, 165, 42);
+                background-color: rgb(255, 217, 0);
                 float: right;
                 width: 30%;
-                height: 500px;
+                height: 300px;
                 max-height: 100%;
             }
             #pie {
-                background-color: yellow;
+                background-color: rgb(0, 0, 0);
                 clear: both;
             }
             h1{
@@ -59,13 +59,13 @@
 
     <body id="contenedor">
 
-        <div id="cabecera" >
+        <header id="cabecera" >
             <br>
             <h1> HTML Y CSS MATERIA ITVO </h1>
             <br>
-        </div>  
+        </header>  
 
-        <div id="menu">
+        <nav id="menu">
             <br>
             <th><a href="#">Inicio</a></th>
             <th><a href="#">Pagina 1</a></th>
@@ -74,39 +74,38 @@
             <th><a href="#">Contacto</a></th>
             <br>
             <br>
-        </div>      
+        </nav>      
+        <section id="contenidod">
+            <article>
+                <h2>Tema 1</h2>
+                <p>Introduccion</p>
+            </article>
+            <article>
+                <h2>Tema 2</h2>
+                <p>Introduccion</p>
+            </article>
+            <article>
+                <h2>Tema 3</h2>
+                <p>Introduccion</p>
+            </article>
+            <article>
+                <h2>Tema 4</h2>
+                <p>Introduccion</p>
+            </article>
 
-        <div id="contenidod">
-            <br>
-            <p><h2>TITULO DEL ARTICULO</h2></p>
-            <p>Texto del articulo</p>
-            <p><h2>TITULO DEL ARTICULO</h2></p>
-            <p>Texto del articulo</p>
-            <p><h2>TITULO DEL ARTICULO</h2></p>
-            <p>Texto del articulo</p>
-            <p><h2>TITULO DEL ARTICULO</h2></p>
-            <p>Texto del articulo</p>
-            <p><h2>TITULO DEL ARTICULO</h2></p>
-            <br>
-        </div>
+        </section>
 
-        <div id="contenidoi">
-            <br>
-            <br>
+        <aside id="contenidoi">
             <h1 style="text-align: center;"> Barra Lateral </h1>
-            <br>
-            <p>Busca un código:
-            <input type="search" name="busquedacodigo" size="4" maxlength="4">
-            <input type="submit" value="Buscar">
-            </p>
-        </div>
+            <form>
+                <input type="search" name="busquedacodigo" size="4" maxlength="4">
+                <input type="submit" value="Buscar">
+            </form>
+        </aside>
 
-        <div id="pie">
-            <br>
-            <p>FRANCISCO DANIEL SANTAELLA RUIZ</p>
-            <br>
-        </div>
+        <footer>FRANCISCO DANIEL SANTAELLA RUIZ</footer>
 
     </body>
 
 </html>
+
