--- a/Index.html
+++ b/Index.html
@@ -6,104 +6,61 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>PRACTICA 1</title>
-        <style>
-
-            #contenedor {
-                border: black 3px solid;
-                width: auto;
-            }
-            #cabecera {
-                background-color: #ff0000;
-                border-top: rgb(177, 176, 176) 10px solid;
-                width: auto;
-            }
-            #menu {
-                background-color: purple;
-                border-top: rgb(177, 176, 176) 10px solid;
-                width: auto;
-            }
-            #contenidod {
-                background-color: rgb(63, 165, 42);
-                float: left;
-                width: 70%; 
-                height: 300px;
-                max-height: 100%; 
-            }
-            #contenidoi {
-                background-color: rgb(255, 217, 0);
-                float: right;
-                width: 30%;
-                height: 300px;
-                max-height: 100%;
-            }
-            #pie {
-                background-color: rgb(0, 0, 0);
-                clear: both;
-            }
-            h1{
-                text-align: center;
-                color: aliceblue;
-            }
-            h2{
-                text-align: center;
-            }
-            p{
-                text-align: center;
-            }
-        </style>
+        <link rel="stylesheet" href="Estilos.css">
 
         <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
         <script> $('div').html("<div>1</div>");</script>
 
     </head>
 
-    <body id="contenedor">
+    <body>
+        <div id="contenedor">
+            <header id="cabecera" >
+                <br>
+                <h1> HTML Y CSS MATERIA ITVO </h1>
+                <br>
+            </header>  
 
-        <header id="cabecera" >
-            <br>
-            <h1> HTML Y CSS MATERIA ITVO </h1>
-            <br>
-        </header>  
+            <nav id="menu">
+                <br>
+                <th><a href="#">Inicio</a></th>
+                <th><a href="#">Pagina 1</a></th>
+                <th><a href="#">Pagina 2</a></th>
+                <th><a href="#">Blog</a></th>                
+                <th><a href="#">Contacto</a></th>
+                <br>
+                <br>
+            </nav>      
+            <section id="contenidod">
+                <article>
+                    <h2>Tema 1</h2>
+                    <p>Introduccion</p>
+                </article>
+                <article>
+                    <h2>Tema 2</h2>
+                    <p>Introduccion</p>
+                </article>
+                <article>
+                    <h2>Tema 3</h2>
+                    <p>Introduccion</p>
+                </article>
+                <article>
+                    <h2>Tema 4</h2>
+                    <p>Introduccion</p>
+                </article>
 
-        <nav id="menu">
-            <br>
-            <th><a href="#">Inicio</a></th>
-            <th><a href="#">Pagina 1</a></th>
-            <th><a href="#">Pagina 2</a></th>
-            <th><a href="#">Blog</a></th>                
-            <th><a href="#">Contacto</a></th>
-            <br>
-            <br>
-        </nav>      
-        <section id="contenidod">
-            <article>
-                <h2>Tema 1</h2>
-                <p>Introduccion</p>
-            </article>
-            <article>
-                <h2>Tema 2</h2>
-                <p>Introduccion</p>
-            </article>
-            <article>
-                <h2>Tema 3</h2>
-                <p>Introduccion</p>
-            </article>
-            <article>
-                <h2>Tema 4</h2>
-                <p>Introduccion</p>
-            </article>
+            </section>
 
-        </section>
+            <aside id="contenidoi">
+                <h1 style="text-align: center;"> Barra Lateral </h1>
+                <form>
+                    <input type="search" name="busquedacodigo" size="4" maxlength="4">
+                    <input type="submit" value="Buscar">
+                </form>
+            </aside>
 
-        <aside id="contenidoi">
-            <h1 style="text-align: center;"> Barra Lateral </h1>
-            <form>
-                <input type="search" name="busquedacodigo" size="4" maxlength="4">
-                <input type="submit" value="Buscar">
-            </form>
-        </aside>
-
-        <footer>FRANCISCO DANIEL SANTAELLA RUIZ</footer>
+            <footer>FRANCISCO DANIEL SANTAELLA RUIZ</footer>
+        </div>
 
     </body>
 
