--- a/Index.html
+++ b/Index.html
@@ -16,9 +16,7 @@
     <body>
         <div id="contenedor">
             <header id="cabecera" >
-                <br>
-                <h1> HTML Y CSS MATERIA ITVO </h1>
-                <br>
+                <h2> HTML Y CSS MATERIA ITVO </h2>
             </header>  
 
             <nav id="menu">
@@ -59,7 +57,7 @@
                 </form>
             </aside>
 
-            <footer>FRANCISCO DANIEL SANTAELLA RUIZ</footer>
+            <footer id="pie">FRANCISCO DANIEL SANTAELLA RUIZ</footer>
         </div>
 
     </body>
